RESULTS/AutoSpec/raw_results/out-4o-oopsla/045_0003/045_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/045_0003/045_merged.c:79:3: error: unterminated comment
   79 |   /*@;
      |   ^
